# codeforge

./: AGENTS.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/codeforge-cpp/: CHANGELOG.md  Cargo.toml
crates/codeforge-cpp/examples/: helpers_demo.rs
crates/codeforge-cpp/src/: ast.rs  emit.rs  helpers.rs  lib.rs
crates/codeforge-cpp/tests/: golden.rs
crates/codeforge-emit/: CHANGELOG.md  Cargo.toml
crates/codeforge-emit/src/: lib.rs
crates/codeforge-python/: CHANGELOG.md  Cargo.toml
crates/codeforge-python/examples/: helpers_demo.rs
crates/codeforge-python/src/: ast.rs  emit.rs  helpers.rs  lib.rs
crates/codeforge-python/tests/: golden.rs
crates/codeforge-rust/: CHANGELOG.md  Cargo.toml
crates/codeforge-rust/examples/: helpers_demo.rs
crates/codeforge-rust/src/: ast.rs  emit.rs  helpers.rs  lib.rs
crates/codeforge-rust/tests/: golden.rs
docs/: FEATURES.md
