[workspace]
resolver = "2"
members = [
    "crates/codeforge-emit",
    "crates/codeforge-cpp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CodeForge Contributors"]
repository = "https://github.com/computerquip/codeforge"
license = "MIT-0"

[workspace.dependencies]
codeforge-emit = { version = "0.1.0", path = "crates/codeforge-emit" }
codeforge-cpp = { version = "0.1.0", path = "crates/codeforge-cpp" }
