[package]
name = "codeforge-cpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "C++ AST and code emitter for CodeForge"

[dependencies]
codeforge-emit = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
